Fixed blank column and narrow text on mobile.
Also made a few other style adjustments.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: 'Zilla Slab', serif;
   display: flex;
   flex-direction: column;
@@ -29,24 +29,24 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  padding: 10px;
   display: flex;
+  justify-content: center;
 }
 
 .listing {
-  margin-left: 12.5em;
-  margin-right: 12.5em;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  padding: 0px;
   display: flex;
+  justify-content: center;
 }
 
 .detail-head {
-  margin-left: 16.5em;
-  margin-right: 16.5em;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  padding: 0px;
   display: flex;
+  justify-content: center;
 }
 
 #map {
@@ -55,6 +55,7 @@ body {
   width: 50%;
   padding: 25px;
   display: flex;
+  justify-content: center;
 }
 
 #calendar {
@@ -63,6 +64,7 @@ body {
   width: 50%;
   padding: 25px;
   display: flex;
+  justify-content: center;
 }
 
 section {
@@ -75,7 +77,8 @@ nav {
 }
 
 nav ul {
-  display:flex;
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   list-style-type: none;
   margin: 0;
@@ -99,6 +102,7 @@ nav li {
 a {
   color: #335E75;
   font-weight: bold;
+  display: inline-block;
 }
 
 nav a {
@@ -134,12 +138,12 @@ nav a:focus {
 
 p {
   font-size: 1em;
-  display: block;
+  display: flex;
   margin-block-start: 1em;
   margin-block-end: 1em;
-  margin-inline-start: 20em;
-  margin-inline-end: 20em;
-  display: flex;
+  margin-inline-start: 5em;
+  margin-inline-end: 5em;
+  justify-content: flex-start;
 }
 
 footer {
